Created a mixin for quick IE hacks

--- a/libs/site.less
+++ b/libs/site.less
@@ -28,6 +28,7 @@
 @import "mixins/popup";
 @import "mixins/vertical-align";
 @import "mixins/btn-icon";
+@import "mixins/ie";
 //@import "mixins/spacing";
 
 /* Module files */
