--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -104,7 +104,7 @@ select {
 // Position radios and checkboxes better
 input[type="radio"],
 input[type="checkbox"] {
-    margin-top: 1px \9; // IE8-9
+    .ie(margin-top,1px);
     line-height: normal;
     margin-right: .4rem;
     &[disabled] {
@@ -295,7 +295,9 @@ textarea.form__field {
     width: 100%;
     &:after {
         pointer-events:none;
-        display/**/: none; // Hides dropdown icon for IE7+
+        @media screen and (~'min-width:0\0') and (min-resolution: +72dpi) { // IE9+
+            display: none;
+        }
     }
     select {
         background: none;
@@ -303,10 +305,11 @@ textarea.form__field {
         -webkit-appearance: none;
         -moz-appearance: window;
         padding-right: 2em;
+        .ie(width,100%);
     }
     .dropdown,
     select {
-        padding-right/**/: 1em; // Removes space for dropdown icon on IE7+
+        .ie(padding-right,1em);
     }
 }
 
@@ -366,6 +369,9 @@ input[class*="dob-"] {
         width: 100%;
         display: inline-block;
     }
+    button {
+        .ie(padding,0 1em);
+    }
     *:first-child {
         border-radius: @form-border-radius 0 0 @form-border-radius;
     }
@@ -393,6 +399,7 @@ input[class*="dob-"] {
 .field-group--toggle {
     label {
         padding: @box-spacing-vertical @box-spacing-horizontal;
+        .ie(padding,0);
         text-align: center;
         input[type="radio"],
         input[type="checkbox"] {
@@ -436,6 +443,9 @@ input[class*="dob-"] {
         .ie8 & {
             display: block;
         }
+        select {
+            .ie(width,100%);
+        }
     }
     input:first-of-type {
         border-radius: @form-border-radius 0 0 @form-border-radius;
@@ -444,7 +454,7 @@ input[class*="dob-"] {
         width: auto;
     }
     select {
-        width: auto \9;
+        .ie(width,auto);
     }
     select,
     input {
