Test alternate blocklinks style

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -97,6 +97,14 @@
     display: block;
     .btn-icon(@i-right,@color:@heritage-blue);
 
+    &--modal {
+        .btn-icon(@i-doc-image,@color:@heritage-blue);
+    }
+
+    &--modal-search {
+        .btn-icon(@i-search,@color:@heritage-blue);
+    }
+
     h1, h2, h3, h4, h5, h6, p {
         text-decoration: none;
         border: none;
