--- a/libs/jade/blocklinks.jade
+++ b/libs/jade/blocklinks.jade
@@ -16,6 +16,8 @@ block sidebar
 block content
 	.articleContent
 		div
+			p Blocklinks are boxed text, usually with a link attribute that is not part of the content. The blocklink is usually a link to a tool or to the document that the current page is referring to.
+
 			.example-box-plain
 				a(href="#") 
 					.blockLinks
@@ -28,3 +30,22 @@ block content
 					| 	&lt;/div&gt;
 					| &lt;/a&gt;
 
+			h2 Blocklink as a modal
+			p Blocklinks can also be extended to be used as image modals. The function of these is to disclose images to people who choose to (similar in purpose to accordions).
+
+			.example-box-plain
+				a.js-toggle-extent-dialog(href="#")
+					.blockLinks.blockLinks--modal
+						p What does this image look like?
+
+			.example-box-plain
+				a.js-toggle-extent-dialog(href="#")
+					.blockLinks.blockLinks--modal-search
+						p What does this image look like?
+
+			.example-box-plain
+				.collapse.collapsible
+					.collapse-toggle What does this image look like?
+					.collapse-content
+						img(src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
+						a.collapse-toggle-close Close
