--- a/libs/tools.less
+++ b/libs/tools.less
@@ -31,7 +31,8 @@
 	//@import "mixins/popup";
 	@import "mixins/vertical-align";
 	@import "mixins/btn-icon";
-	//s@import "mixins/spacing";
+	//@import "mixins/spacing";
+	@import "mixins/ie";
 
 	/* Module files */
 	//@import "modules/extent-switcher-modal";
