--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -93,10 +93,10 @@
  * LINKS
  */
 
-@link-color:            			@brand-primary;
-@link-active-colour:    			@heritage-blue;
-@link-hover-color:      			@link-color;
-@link-visited-color:    			@brand-primary;
+@link-color:            			@blue;
+@link-active-color:    				@blue-darker;
+@link-hover-color:      			@blue-darker;
+@link-visited-color:    			@purple-dark;
 
 
 /****************************************************************************
