Fixed link colour spelling mistake in variable

--- a/libs/base/lists.less
+++ b/libs/base/lists.less
@@ -67,7 +67,7 @@ li > ol {
         }
 
         &:active {
-            color: @link-active-colour;
+            color: @link-active-color;
         }
 
         &:visited {
