Tweaked link colours

--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -94,8 +94,8 @@
  */
 
 @link-color:            			@blue;
-@link-active-color:    				@blue-darker;
-@link-hover-color:      			@blue-darker;
+@link-active-color:    				@blue;
+@link-hover-color:      			@blue;
 @link-visited-color:    			@purple-dark;
 
 
