Added focus outline to links for accessbility

--- a/libs/base/type.less
+++ b/libs/base/type.less
@@ -143,6 +143,10 @@ a {
         //background-color:  lighten(@link-color, 70%);
     }
 
+    &:focus {
+        outline: 2px solid @heritage-yellow;
+    }
+
     &:active {
         color: @link-active-color;
     }
