--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -23,6 +23,7 @@
 .side-nav-beta {
     .main-content__sidebar;
     margin: 0 0 @box-spacing 0;
+    overflow: visible;
 
     &.sibling {
         border: 0 solid @inventive-teal;
