--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -172,7 +172,7 @@ select {
     }
     &:focus {
         border-width: 1px;
-        outline: 2px solid @heritage-blue-lighter;
+        outline: 2px solid @heritage-yellow;
     }
 }
 
@@ -249,6 +249,9 @@ textarea.form__field {
             &:hover:before {
                 border-color: @blue-light;
             }
+        }
+        &:focus {
+            outline: 2px solid @heritage-yellow;
         }
     }
     &--inline {
