--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -36,11 +36,8 @@ fieldset,
     margin-bottom: @box-spacing;
 }
 
-legend {
-    color: @heritage-blue;
-}
-
 label,
+legend,
 .form__label {
     display: block;
     max-width: 100%; // Force IE8 to wrap long content (see https://github.com/twbs/bootstrap/issues/13141)
