Removed legend from h3

--- a/libs/base/type.less
+++ b/libs/base/type.less
@@ -81,7 +81,7 @@ h2 {
     font-size:      @font-size-h2;
 }
 
-h3, legend {
+h3 {
     font-size:      @font-size-h3;
     font-weight:    @font-weight-bold;
 }
