Updated radio groups with legend tag

--- a/libs/jade/fields.jade
+++ b/libs/jade/fields.jade
@@ -164,7 +164,7 @@ block content
 
 			.example-box-plain
 				fieldset
-					label(for="radio") Radio buttons
+					legend(for="radio") Radio buttons
 					label.radio.radio--block
 						input(checked, name="radio", type="radio", value="option1")
 						| Yes
@@ -177,7 +177,7 @@ block content
 			pre
 				code.language-html
 					| &lt;fieldset&gt;
-					| 	&lt;label for="radio"&gt;Radio buttons&lt;/label&gt;
+					| 	&lt;legend for="radio"&gt;Radio buttons&lt;/legend&gt;
 					| 	&lt;label class="radio radio--block"&gt;
 					| 		&lt;input checked name="radio" type="radio" value="option1"&gt;Yes
 					| 	&lt;/label&gt;
@@ -191,7 +191,7 @@ block content
 
 			.example-box-plain
 				fieldset
-					label(for="radio-inline") Inline Radio buttons
+					legend(for="radio-inline") Inline Radio buttons
 					label.radio.radio--inline
 						input(checked name="radio-inline", type="radio", value="option1")
 						| Yes
@@ -204,7 +204,7 @@ block content
 			pre
 				code.language-html
 					| &lt;fieldset&gt;
-					| 	&lt;label for="radio-inline"&gt;Inline Radio buttons&lt;/label&gt;
+					| 	&lt;legend for="radio-inline"&gt;Inline Radio buttons&lt;/legend&gt;
 					| 		&lt;label class="radio radio--inline"&gt;
 					| 	&lt;input checked name="radio-inline" type="radio" value="option1"&gt;Yes
 					| 	&lt;/label&gt;
@@ -218,7 +218,7 @@ block content
 
 			.example-box-plain
 				fieldset
-					label(for="radio-description") Radio buttons (description)
+					legend(for="radio-description") Radio buttons (description)
 					label.radio.radio--block
 						input(checked name="radio-description", type="radio", value="option1")
 						p
@@ -240,7 +240,7 @@ block content
 			pre
 				code.language-html
 					| &lt;fieldset&gt;
-					| 	&lt;label for="radio-description"&gt;Radio buttons (description)&lt;/label&gt;
+					| 	&lt;legend for="radio-description"&gt;Radio buttons (description)&lt;/legend&gt;
 					| 	&lt;label class="radio radio--block"&gt;
 					| 		&lt;input checked name="radio-description" type="radio" value="option1"&gt;
 					| 		&lt;p&gt;
@@ -263,7 +263,7 @@ block content
 
 			.example-box-plain
 				fieldset
-					label(for="checkbox") Checkboxes
+					legend(for="checkbox") Checkboxes
 					label.checkbox.checkbox--block
 						input(name="checkbox", type="checkbox")
 						| Option one
@@ -276,7 +276,7 @@ block content
 			pre
 				code.language-html
 					| &lt;fieldset&gt;
-					| 	&lt;label for="checkbox"&gt;Checkboxes&lt;/label&gt;
+					| 	&lt;legend for="checkbox"&gt;Checkboxes&lt;/legend&gt;
 					| 	&lt;label class="checkbox checkbox--block"&gt;
 					| 		&lt;input name="checkbox" type="checkbox"&gt;Option one
 					| 	&lt;/label&gt;
@@ -290,7 +290,7 @@ block content
 
 			.example-box-plain
 				fieldset
-					label(for="checkbox-inline") Inline checkboxes
+					legend(for="checkbox-inline") Inline checkboxes
 					label.checkbox.checkbox--inline
 						input(name="checkbox-inline", type="checkbox")
 						| Option one
@@ -303,7 +303,7 @@ block content
 			pre
 				code.language-html
 					| &lt;fieldset&gt;
-					| 	&lt;label for="checkbox-inline"&gt;Inline checkboxes&lt;/label&gt;
+					| 	&lt;legend for="checkbox-inline"&gt;Inline checkboxes&lt;/legend&gt;
 					| 	&lt;label class="checkbox checkbox--inline"&gt;
 					| 		&lt;input name="checkbox-inline" type="checkbox"&gt;Option one
 					| 	&lt;/label&gt;
@@ -317,7 +317,7 @@ block content
 
 			.example-box-plain
 				fieldset
-					label(for="checkbox-description") Check boxes (description)
+					legend(for="checkbox-description") Check boxes (description)
 					label.checkbox.checkbox--block
 						input(name="checkbox-description", type="checkbox")
 						p
@@ -339,7 +339,7 @@ block content
 			pre
 				code.language-html
 					| &lt;fieldset&gt;
-					| 	&lt;label for="checkbox-description"&gt;Check boxes (description)&lt;/label&gt;
+					| 	&lt;legend for="checkbox-description"&gt;Check boxes (description)&lt;/legend&gt;
 					| 	&lt;label class="checkbox checkbox--block"&gt;
 					| 		&lt;input name="checkbox-description" type="checkbox"&gt;
 					| 		&lt;p&gt;
