Amend nav header style

--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -64,11 +64,12 @@
 			color: @heritage-blue;
 			font-weight: @font-weight-boldest;
 			font-size: @font-size-medium;
+			margin-right: 3em;
 			&:after {
 				color: @heritage-blue-lighter;
 				content: "\2c4";
 				font-family: 'cab-icons';
-				margin-left: @box-spacing*.5;
+				margin-right: -@box-spacing*2;
 				float: right;
 			}
 		}
