--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -21,9 +21,9 @@
 }
 
 .side-nav-beta {
-    .main-content__sidebar;
-    margin: 0 0 @box-spacing 0;
-    overflow: visible;
+	.main-content__sidebar;
+	margin: 0 0 @box-spacing 0;
+	overflow: visible;
 
 	&.sibling {
 		border: 0 solid @inventive-teal;
@@ -59,18 +59,24 @@
 		&.-active,
 		&.-open {
 			display: block;
+			padding-right: 2.7rem !important;
+			position: relative;
 		}
 		> a {
 			color: @heritage-blue;
 			font-weight: @font-weight-boldest;
 			font-size: @font-size-medium;
-			margin-right: 3em;
-			&:after {
-				color: @heritage-blue-lighter;
+			&:before {
 				content: "\2c4";
 				font-family: 'cab-icons';
-				margin-right: -@box-spacing*2;
-				float: right;
+				display: inline-block;
+				color: @heritage-blue-lighter;
+				width: 1.5rem;
+				text-align: center;
+				margin-right: .5rem;
+				font-weight: @font-weight-base;
+				.vertical-align(absolute);
+				right: .5rem;
 			}
 		}
 	}
