Updated CSS to match the new date field structure

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -332,7 +332,8 @@ input[class*="dob-"] {
         margin: 0;
     }
 }*/
-.form-group-date {
+.form-group-date fieldset {
+    &:extend(fieldset);
     width: 5rem;
     display: inline-block;
     float: left;
