Update font names in variables

--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -222,15 +222,15 @@
 @i-help: 					"\3f";
 @i-search: 					"\e600";
 @i-email: 					"\f003";
-@i-star: 					"\2605";
+@i-star: 					"\e602";
 @i-star-o: 					"\f006";
-@i-tick: 					"\2713";
-@i-cross: 					"\2716";
+@i-tick: 					"\e601";
+@i-cross: 					"\e603";
 @i-bin: 					"\e607";
 @i-inbox: 					"\e618";
 @i-redo: 					"\f01e";
-@i-left: 					"\3c";
-@i-right: 					"\3e";
+@i-left: 					"\e604";
+@i-right: 					"\e608";
 @i-angle-double-left: 		"\f100";
 @i-angle-double-right: 		"\f101";
 @i-angle-left: 				"\f104";
@@ -242,19 +242,19 @@
 @i-exclamation-circle: 		"\f06a";
 @i-exclamation-triangle: 	"\f071";
 @i-bubble: 					"\e606";
-@i-up: 						"\2c4";
-@i-down: 					"\2c5";
+@i-up: 						"\e609";
+@i-down: 					"\e612";
 @i-external-link:			"\f08e";
-@i-megaphone: 				"\261e";
-@i-menu: 					"\2630";
-@i-right-small:				"\25b6";
-@i-sort: 					"\2195";
-@i-sort-desc: 				"\2193";
-@i-sort-asc: 				"\f0de";
+@i-megaphone: 				"\e613";
+@i-menu: 					"\e615";
+@i-right-small:				"\e616";
+@i-sort: 					"\e617";
+@i-sort-desc: 				"\e619";
+@i-sort-asc: 				"\e620";
 @i-doc: 					"\f016";
 @i-doc-pdf: 				"\f1c1";
 @i-doc-word: 				"\f1c2";
-@i-doc-excel: 				"\f1c3";
+@i-doc-excel: 				"\f16d";
 @i-doc-powerpoint: 			"\f1c4";
 @i-doc-image: 				"\f1c5";
 @i-doc-zip: 				"\f1c6";
@@ -263,14 +263,16 @@
 @i-doc-code: 				"\f1c9";
 @i-whatsapp: 				"\f232";
 @i-copy: 					"\e614";
-@i-clock: 					"\231a";
-@i-print: 					"\2399";
+@i-clock: 					"\e622";
+@i-print: 					"\e623";
 @i-save: 					"\e610";
 @i-load: 					"\e611";
-@i-happy: 					"\263a";
+@i-happy: 					"\e624";
+@i-help:                    "\e625";
 @i-exit: 					"\e60a";
 @i-new-window: 				"\e60f";
 @i-google: 					"\e60b";
 @i-facebook: 				"\e60c";
 @i-twitter: 				"\e60d";
+@i-undo:                    "\e626";
 @i-zws: 					"_";
