--- a/libs/jade/long-form.jade
+++ b/libs/jade/long-form.jade
@@ -2,6 +2,7 @@ block settings
 	- var title = "Before you get building work done"
 	- var sidebar = true
 	- var toolbars = true
+	- var toolbarsadviser = true
 	- var cookiemonster = true
 	- var mockup = true
 
