Update sidebar styling

--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -59,13 +59,15 @@
 		&.-active,
 		&.-open {
 			display: block;
-			padding-right: 2.7rem !important;
+			/* Hide icon until research deems required
+			padding-right: 2.7rem; */
 			position: relative;
 		}
 		> a {
 			color: @heritage-blue;
 			font-weight: @font-weight-boldest;
 			font-size: @font-size-medium;
+			/* Hide icon until research deems required
 			&:before {
 				content: "\2c4";
 				font-family: 'cab-icons';
@@ -78,6 +80,7 @@
 				.vertical-align(absolute);
 				right: .5rem;
 			}
+			*/
 		}
 	}
 
