Overview section initial styling

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -122,6 +122,14 @@
     }
 }
 
+// Used for the summary box at the top of long content pages
+.steps {
+    background-color: @heritage-blue-lightest;
+    padding: @box-spacing-horizontal;
+    h1,h2,h3,h4,h5,h6 {
+        margin-top: 0;
+    }
+}
 
 // @todo This needs renamed
 .articleContent {
