Changed h5 and h6 to black

--- a/libs/base/type.less
+++ b/libs/base/type.less
@@ -94,11 +94,13 @@ h4 {
 h5 {
     font-size:      @font-size-h5;
     font-weight:    @font-weight-bold;
+    color:          @text-color;
 }
 
 h6 {
     font-size:      @font-size-h5;
     font-weight:    @font-weight-bold;
+    color:          @text-color;
 }
 
 h1 + h2,
