--- a/libs/jade/buttons.jade
+++ b/libs/jade/buttons.jade
@@ -17,8 +17,8 @@ block sidebar
 block content
 	.articleContent
 		div
+			h2 Buttons (directions)
 			.example-box-plain
-				label Buttons (directions)
 				button.btn-light.left-button-icon(type="button") Back
 				button.btn.right-button-icon(type="button") Continue
 				button.btn.tick-button-icon(type="submit") Submit
@@ -32,8 +32,8 @@ block content
 					| &lt;button type="button" class="btn search-button-icon"&gt;Search&lt;/button&gt;
 
 			// Testing back button
+			h2 Buttons (directions alternative)
 			.example-box-plain
-				label Buttons (directions alternative)
 				button.btn-white.back-button-icon(type="button") Back
 				button.btn-white.left-cancel-button-icon(type="button") Cancel
 				// Recommending we use the lighter back button to differentiate between purposes
@@ -43,8 +43,8 @@ block content
 					| &lt;button type="button" class="btn-white left-cancel-button-icon"&gt;Cancel&lt;/button&gt;
 
 			// Cmobining back button
+			h2 Buttons combined (directions alternative)
 			.example-box-plain
-				label Buttons combined (directions alternative)
 				button.btn-white.back-button-icon(type="button") Back
 				button.btn.right-button-icon(type="button") Continue
 				// Recommending we use the lighter back button to differentiate between purposes
@@ -53,8 +53,8 @@ block content
 					| &lt;button type="button" class="btn-white back-button-icon"&gt;Back&lt;/button&gt;
 					| &lt;button type="button" class="btn right-button-icon"&gt;Continue&lt;/button&gt;
 
+			h2 Buttons (actions)
 			.example-box-plain
-				label Buttons (actions)
 				button.btn-secondary.email-button-icon(type="button") Email
 				button.btn-secondary.print-button-icon(type="button") Print
 				button.btn-secondary.restart-button-icon(type="reset") Restart
@@ -66,8 +66,8 @@ block content
 					| &lt;button type="reset" class="btn-secondary restart-button-icon"&gt;Restart&lt;/button&gt;
 					| &lt;button type="button" class="btn-secondary save-button-icon"&gt;Save&lt;/button&gt;
 
+			h2 Buttons (additional)
 			.example-box-plain
-				label Buttons (additional)
 				button.btn-disabled(disabled, type="button") Continue
 				button.btn-success(type="button") Success
 				button.btn-warning.exclamation-button-icon(type="button") Warning
@@ -77,15 +77,15 @@ block content
 					| &lt;button type="button" class="btn-success"&gt;Success&lt;/button&gt;
 					| &lt;button type="button" class="btn-warning exclamation-button-icon"&gt;Warning&lt;/button&gt;
 
+			h2 Buttons (right)
 			.example-box-plain
-				label Buttons (right)
 				button.btn-secondary.btn-right.print-button-icon(type="button") Print
 			pre
 				code.language-html
 					| &lt;button type="button" class="btn-secondary btn-right print-button-icon"&gt;Print&lt;/button&gt;
 
+			h2 Buttons (small)
 			.example-box-plain
-				label Buttons (small)
 				button.btn.btn-small(type="button") Basic
 				button.btn-light.btn-small(type="button") Light
 				button.btn-secondary.btn-small(type="button") Secondary
@@ -104,8 +104,8 @@ block content
 					| &lt;button type="button" class="btn-success btn-small"&gt;Success&lt;/button&gt;
 					| &lt;button type="button" class="btn-warning btn-small"&gt;Warning&lt;/button&gt;
 
+			h2 Buttons (group)
 			.example-box-plain
-				label Buttons (group)
 				.btn-group
 					button.btn(type="button") Left
 					button.btn(type="button") Middle
